# valgebra-vtjson

./: .gitignore  .pre-commit-config.yaml  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: ci.yml
benches/: bench_vtjson_compare.py
docs/: migrating-from-vtjson.md  performance.md
tests/: test_coverage_edges.py  test_differential.py  test_differential_fuzz.py  test_fishtest_corpus.py  test_fishtest_upstream.py  test_parity_inventory.py  test_valgebra_advantages.py  test_vtjson_compat.py
tests/fixtures/: fishtest_like.py
vtjson_compat/: __init__.py  _constructs.py  _formats.py  _translate.py  _valgebra_api.py
