[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valgebra-vtjson"
version = "0.0.0"
requires-python = ">=3.10"
description = "vtjson interoperability layer for valgebra: read vtjson-style schemas and validate them through valgebra, proven by a differential suite."
readme = "README.md"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
keywords = ["validation", "schema", "vtjson", "valgebra", "compatibility"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = ["valgebra"]

[project.optional-dependencies]
# The network format validators (email, domain_name) reuse the same engines the
# upstream library uses; they are not needed for the rest of the layer.
formats = ["email-validator>=2", "idna>=3", "dnspython>=2"]
# python-magic (and the system libmagic library) backs the `magic` validator.
magic = ["python-magic>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["vtjson_compat"]

# Local development resolves valgebra from the sibling working tree; CI checks
# the valgebra repo out at the same relative path before `uv sync`.
[tool.uv.sources]
valgebra = { path = "../valgebra", editable = true }

[dependency-groups]
dev = [
    "annotated-types>=0.7",
    "pytest>=8",
    "ruff>=0.15.16",
    "ty>=0.0.48",
    "vtjson>=2.3.0",
    "email-validator>=2",
    "idna>=3",
    "dnspython>=2",
    "python-magic>=0.4",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true

[tool.ruff]
target-version = "py310"
src = ["vtjson_compat", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
    "ANN",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",
    "PLR2004",
    "ARG001",
    "INP001",
    "FBT003",
    "EM101",
    "TRY003",
    "ERA001",
]

[tool.ruff.lint.isort]
known-first-party = ["vtjson_compat"]

[tool.ty.environment]
python-version = "3.14"
